-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-09-15	remko
	* gmt_init.c:		Produce error report when non-common option found by
				GMT_default_error.
	* *_func.c:		Renamed to *.c

2011-09-15	pwessel
	* *.c:			Change module interface to one flavor:
				GMT_module (API, mode, args) to avoid having separate
				GMT_module and GMT_module_cmd wrappers.  This eliminates
				the need for the gmt_module.c and gmt_<suppl>.c files.

2011-09-12	remko
	* configure.ac:		Do not unnecessarily overrule CFLAGS.

2011-09-08	remko
	* ps2raster_func.c:	Add -TE option to include /PageSize in EPS.

2011-08-30	jluis
	* gmt_plot.h:		More Voodoo. If the "char string[GMT_TEXT_LEN64];" 
				is not the first member in the GMT_SYMBOL struct than 
				psxy -Sl<size>/Text will have corrupt 'Text'in non-debug 
				binaries compiled with VS2010. 

2011-08-29	remko
	* gmt_init.c gmt_error.h:	Let GMT_report product return value of 1.
	* configure.ac:		When --includedir is specified, do not automatically add /gmt.

2011-08-28	pwessel
	* pstext_func.c:	Stated one needed to use psclip -Ct but it was -Cs
	* psclip.txt:		Fixed old -C syntax in synopsis.
	* gmt_io.c:		The GMT_not_numeric function failed to consider the
				trailing units, e.g., -0.2c.  This tripped up gmtset.

2011-08-27	pwessel
	* gmtselect_func.c:	Did not return to read after finding a table header
	* gmt_support.c:	Reduced the verbosity level of contouring -Gd messages
				to require -V3 as it is too detailed and repetitive for -V2.

-----------------------------------------------------------------------------------------
2011-08-26	pwessel
	GMT 5.0.0b finalized and released.
-----------------------------------------------------------------------------------------

2011-08-26	remko
	* pslib.c:		Made PSL_comment and PSL_command functions instead of macros
				for all platforms